# dr_pogo

./: CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
coarse_registration/: coarse_registrations.py  config.yaml
config/: config_dro_boreas_rt.yaml  config_raplace.yaml  config_registration.yaml  rviz.rviz
dr_pogo/: boreas_player.py  dro.py  dro_motion_models.py  dro_node.py  raplace_node.py  registration_node.py
dr_pogo/pogo/: pogo.cpp  pogo_node.cpp  pose_graph.cpp  pose_graph.h  utils.h
dro/: config_dro.yaml  config_dro_dg.yaml  config_dro_g.yaml  config_example.yaml  dro_utils.py  fine_registration.py  gp_doppler.py  motion_models.py  radar_gp_state_estimation.py
launch/: dr_pogo.launch.py  dro_launch.py
msg/: LocalMapInfo.msg  LoopCandidate.msg  RadarInfo.msg
pogo/: CMakeLists.txt  config.yaml  pogo.py
pogo/app/: pogo.cpp
pogo/include/: pose_graph.h
raplace/: config.yaml  raplace.py
script_for_paper/: eval.py
utils/: utils.py
