<?xml version="1.0"?>
<package format="3">
  <name>dr_pogo</name>
  <version>0.0.0</version>
  <description>ROS 2 Python package for Boreas dataset playback.</description>

  <maintainer email="ced@example.com">ced</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-pandas</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
